external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_empty_match.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[EC04036]: non-exhaustive pattern
  ┌─ tests/move_2024/matching/invalid_empty_match.move:7:16
  │
7 │         match (e) {
  │                ^ Pattern '_' not covered

error[EC04036]: non-exhaustive pattern
   ┌─ tests/move_2024/matching/invalid_empty_match.move:17:16
   │
17 │         match (e) {
   │                ^ Pattern '_' not covered
